# Python-IRC-server

./: .gitignore  Dockerfile  Makefile  README.md  config.yaml  docker-compose.yml  projekt_wstepny.md  pyproject.toml  readme.md
src/: channel.py  channel_manager.py  commands.py  config.py  main.py  protocol.py  server.py  session.py  user_manager.py
tests/: IRCClient.py  conftest.py  test_channel.py  test_channel_manager.py  test_commands.py  test_integration.py  test_protocol.py  test_server.py  test_session.py  test_stability.py  test_user_manager.py
