[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyirc-server"
version = "0.1.0"
description = "An IRC Server"
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0"
]

[dependency-groups]
dev = [
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "types-PyYAML>=6.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]